src/test/ui/useless-comment.stderr
error: unused doc comment
  --> $DIR/useless-comment.rs:9:1
   |
LL | /// foo
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | mac!();
   | ------- rustdoc does not generate documentation for macro expansions
   |
note: lint level defined here
  --> $DIR/useless-comment.rs:3:9
   |
LL | #![deny(unused_doc_comments)]
   |         ^^^^^^^^^^^^^^^^^^^
   = help: to document an item produced by a macro, the macro must produce the documentation as part of its expansion

error: unused doc comment
  --> $DIR/useless-comment.rs:13:5
   |
LL |     /// a
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |     let x = 12;
   |     ----------- rustdoc does not generate documentation for statements

error: unused doc comment
  --> $DIR/useless-comment.rs:16:5
   |
LL | /     /// multi-line
LL | |     /// doc comment
LL | |     /// that is unused
   | |______________________^
LL | /     match x {
LL | |         /// c
LL | |         1 => {},
LL | |         _ => {}
LL | |     }
   | |_____- rustdoc does not generate documentation for expressions

error: unused doc comment
  --> $DIR/useless-comment.rs:20:9
   |
LL |         /// c
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |         1 => {},
   |         ------- rustdoc does not generate documentation for match arms

error: unused doc comment
  --> $DIR/useless-comment.rs:25:5
   |
LL |     /// foo
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |     unsafe {}
   |     --------- rustdoc does not generate documentation for expressions

error: unused doc comment
  --> $DIR/useless-comment.rs:28:5
   |
LL |     #[doc = "foo"]
   |     ^^^^^^^^^^^^^^
LL |     #[doc = "bar"]
LL |     3;
   |     - rustdoc does not generate documentation for expressions

error: unused doc comment
  --> $DIR/useless-comment.rs:29:5
   |
LL |     #[doc = "bar"]
   |     ^^^^^^^^^^^^^^
LL |     3;
   |     - rustdoc does not generate documentation for expressions

error: unused doc comment
  --> $DIR/useless-comment.rs:32:5
   |
LL |     /// bar
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |     mac!();
   |     ------- rustdoc does not generate documentation for macro expansions
   |
   = help: to document an item produced by a macro, the macro must produce the documentation as part of its expansion

error: unused doc comment
  --> $DIR/useless-comment.rs:35:13
   |
LL |     let x = /** comment */ 47;
   |             ^^^^^^^^^^^^^^ -- rustdoc does not generate documentation for expressions

error: unused doc comment
  --> $DIR/useless-comment.rs:37:5
   |
LL |       /// dox
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | /     {
LL | |
LL | |     }
   | |_____- rustdoc does not generate documentation for expressions

error: aborting due to 10 previous errors

